--- a/backend/celebration-garden-cms/package.json
+++ b/backend/celebration-garden-cms/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@strapi/plugin-cloud": "5.33.1",
     "@strapi/plugin-users-permissions": "5.33.1",
+    "@strapi/provider-upload-cloudinary": "^5.33.2",
     "@strapi/strapi": "5.33.1",
     "better-sqlite3": "12.4.1",
     "pg": "^8.11.3",
