Image auto-upload done. Form working now

--- a/frontend/env.local.template
+++ b/frontend/env.local.template
@@ -13,5 +13,15 @@ STRAPI_API_TOKEN=
 # WhatsApp Configuration (Optional)
 NEXT_PUBLIC_WHATSAPP_PHONE=1234567890
 
+# Cloudinary Configuration (for direct client-side uploads)
+# NOTE: No API key/secret needed! Only cloud name and upload preset are required.
+# The upload preset handles authentication (must be set to "Unsigned" in Cloudinary)
+# Get cloud name from https://cloudinary.com/console
+NEXT_PUBLIC_CLOUDINARY_NAME=your-cloudinary-cloud-name
+NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET=ml_default
+# Optional: Fallback to server-side env vars if client-side not set
+CLOUDINARY_NAME=your-cloudinary-cloud-name
+CLOUDINARY_UPLOAD_PRESET=ml_default
+
 # Node Environment
 NODE_ENV=development
