--- a/deployment/config/nginx-strapi.conf
+++ b/deployment/config/nginx-strapi.conf
@@ -1,15 +1,17 @@
-# Nginx configuration for Strapi CMS
+# Nginx configuration for Strapi CMS Admin Panel
+# This routes admin.celebration-garden.com directly to Strapi admin interface
 # Place this file in /etc/nginx/sites-available/strapi
 # Then create symlink: sudo ln -s /etc/nginx/sites-available/strapi /etc/nginx/sites-enabled/
 
 server {
     listen 80;
-    server_name api.yourdomain.com;  # Change to your domain
+    server_name admin.celebration-garden.com;
 
     # Redirect HTTP to HTTPS (uncomment after SSL setup)
     # return 301 https://$server_name$request_uri;
 
     # For initial setup, allow HTTP
+    # Routes admin.celebration-garden.com directly to Strapi (admin panel at root)
     location / {
         proxy_pass http://localhost:1337;
         proxy_http_version 1.1;
@@ -35,10 +37,10 @@ server {
 # SSL Configuration (uncomment after running certbot)
 # server {
 #     listen 443 ssl http2;
-#     server_name api.yourdomain.com;
+#     server_name admin.celebration-garden.com;
 # 
-#     ssl_certificate /etc/letsencrypt/live/api.yourdomain.com/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/api.yourdomain.com/privkey.pem;
+#     ssl_certificate /etc/letsencrypt/live/admin.celebration-garden.com/fullchain.pem;
+#     ssl_certificate_key /etc/letsencrypt/live/admin.celebration-garden.com/privkey.pem;
 # 
 #     location / {
 #         proxy_pass http://localhost:1337;
