--- a/deployment/config/nginx-nextjs.conf
+++ b/deployment/config/nginx-nextjs.conf
@@ -4,7 +4,7 @@
 
 server {
     listen 80;
-    server_name yourdomain.com www.yourdomain.com;  # Change to your domain
+    server_name celebration-garden.com www.celebration-garden.com;
 
     # Redirect HTTP to HTTPS (uncomment after SSL setup)
     # return 301 https://$server_name$request_uri;
@@ -33,10 +33,10 @@ server {
 # SSL Configuration (uncomment after running certbot)
 # server {
 #     listen 443 ssl http2;
-#     server_name yourdomain.com www.yourdomain.com;
+#     server_name celebration-garden.com www.celebration-garden.com;
 # 
-#     ssl_certificate /etc/letsencrypt/live/yourdomain.com/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/yourdomain.com/privkey.pem;
+#     ssl_certificate /etc/letsencrypt/live/celebration-garden.com/fullchain.pem;
+#     ssl_certificate_key /etc/letsencrypt/live/celebration-garden.com/privkey.pem;
 # 
 #     location / {
 #         proxy_pass http://localhost:3000;
