--- a/deployment/config/nginx-strapi.conf
+++ b/deployment/config/nginx-strapi.conf
@@ -11,8 +11,10 @@ server {
     # return 301 https://$server_name$request_uri;
 
     # For initial setup, allow HTTP
-    # Routes admin.celebration-garden.com directly to Strapi (admin panel at root)
-    location / {
+    # Nginx handles routing: admin.celebration-garden.com shows admin panel at root (no /admin in URL)
+    
+    # Handle /admin paths (for assets, API calls, etc. from the admin panel)
+    location /admin {
         proxy_pass http://localhost:1337;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -21,6 +23,38 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
+        proxy_cache_bypass $http_upgrade;
+    }
+    
+    # Handle /api paths (Strapi API endpoints)
+    location /api {
+        proxy_pass http://localhost:1337;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
+        proxy_cache_bypass $http_upgrade;
+    }
+    
+    # Root path - serve admin panel directly (nginx rewrites / to /admin)
+    location / {
+        proxy_pass http://localhost:1337/admin;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
         proxy_cache_bypass $http_upgrade;
         
         # Increase timeouts for large uploads
@@ -42,7 +76,8 @@ server {
 #     ssl_certificate /etc/letsencrypt/live/admin.celebration-garden.com/fullchain.pem;
 #     ssl_certificate_key /etc/letsencrypt/live/admin.celebration-garden.com/privkey.pem;
 # 
-#     location / {
+#     # Handle /admin paths (for assets, API calls, etc. from the admin panel)
+#     location /admin {
 #         proxy_pass http://localhost:1337;
 #         proxy_http_version 1.1;
 #         proxy_set_header Upgrade $http_upgrade;
@@ -51,6 +86,38 @@ server {
 #         proxy_set_header X-Real-IP $remote_addr;
 #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 #         proxy_set_header X-Forwarded-Proto $scheme;
+#         proxy_set_header X-Forwarded-Host $host;
+#         proxy_set_header X-Forwarded-Port $server_port;
+#         proxy_cache_bypass $http_upgrade;
+#     }
+#     
+#     # Handle /api paths (Strapi API endpoints)
+#     location /api {
+#         proxy_pass http://localhost:1337;
+#         proxy_http_version 1.1;
+#         proxy_set_header Upgrade $http_upgrade;
+#         proxy_set_header Connection 'upgrade';
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#         proxy_set_header X-Forwarded-Host $host;
+#         proxy_set_header X-Forwarded-Port $server_port;
+#         proxy_cache_bypass $http_upgrade;
+#     }
+#     
+#     # Root path - serve admin panel directly (nginx rewrites / to /admin)
+#     location / {
+#         proxy_pass http://localhost:1337/admin;
+#         proxy_http_version 1.1;
+#         proxy_set_header Upgrade $http_upgrade;
+#         proxy_set_header Connection 'upgrade';
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#         proxy_set_header X-Forwarded-Host $host;
+#         proxy_set_header X-Forwarded-Port $server_port;
 #         proxy_cache_bypass $http_upgrade;
 #         
 #         proxy_connect_timeout 600;
