--- a/deployment/config/nginx-strapi.conf
+++ b/deployment/config/nginx-strapi.conf
@@ -13,6 +13,21 @@ server {
     # For initial setup, allow HTTP
     # Nginx handles routing: admin.celebration-garden.com shows admin panel at root (no /admin in URL)
     
+    # Handle /api paths first (Strapi API endpoints - must come before /admin)
+    location /api {
+        proxy_pass http://localhost:1337;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
+        proxy_cache_bypass $http_upgrade;
+    }
+    
     # Handle /admin paths (for assets, API calls, etc. from the admin panel)
     location /admin {
         proxy_pass http://localhost:1337;
@@ -28,8 +43,9 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
     
-    # Handle /api paths (Strapi API endpoints)
-    location /api {
+    # Fix malformed admin paths (adminupload -> admin/upload, admincontent-manager -> admin/content-manager)
+    location ~ ^/admin(upload|content-manager|i18n|users-permissions|email|upload|transfer|settings) {
+        rewrite ^/admin(upload|content-manager|i18n|users-permissions|email|upload|transfer|settings)(.*)$ /admin/$1$2 break;
         proxy_pass http://localhost:1337;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -76,6 +92,21 @@ server {
 #     ssl_certificate /etc/letsencrypt/live/admin.celebration-garden.com/fullchain.pem;
 #     ssl_certificate_key /etc/letsencrypt/live/admin.celebration-garden.com/privkey.pem;
 # 
+#     # Handle /api paths first (Strapi API endpoints - must come before /admin)
+#     location /api {
+#         proxy_pass http://localhost:1337;
+#         proxy_http_version 1.1;
+#         proxy_set_header Upgrade $http_upgrade;
+#         proxy_set_header Connection 'upgrade';
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#         proxy_set_header X-Forwarded-Host $host;
+#         proxy_set_header X-Forwarded-Port $server_port;
+#         proxy_cache_bypass $http_upgrade;
+#     }
+#     
 #     # Handle /admin paths (for assets, API calls, etc. from the admin panel)
 #     location /admin {
 #         proxy_pass http://localhost:1337;
@@ -91,8 +122,9 @@ server {
 #         proxy_cache_bypass $http_upgrade;
 #     }
 #     
-#     # Handle /api paths (Strapi API endpoints)
-#     location /api {
+#     # Fix malformed admin paths (adminupload -> admin/upload, admincontent-manager -> admin/content-manager)
+#     location ~ ^/admin(upload|content-manager|i18n|users-permissions|email|upload|transfer|settings) {
+#         rewrite ^/admin(upload|content-manager|i18n|users-permissions|email|upload|transfer|settings)(.*)$ /admin/$1$2 break;
 #         proxy_pass http://localhost:1337;
 #         proxy_http_version 1.1;
 #         proxy_set_header Upgrade $http_upgrade;
