--- a/deployment/config/nginx-strapi.conf
+++ b/deployment/config/nginx-strapi.conf
@@ -10,58 +10,15 @@ server {
     # Redirect HTTP to HTTPS (uncomment after SSL setup)
     # return 301 https://$server_name$request_uri;
 
-    # For initial setup, allow HTTP
-    # Nginx handles routing: admin.celebration-garden.com shows admin panel at root (no /admin in URL)
-    
-    # Handle /api paths first (Strapi API endpoints - must come before /admin)
-    location /api {
-        proxy_pass http://localhost:1337;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port $server_port;
-        proxy_cache_bypass $http_upgrade;
-    }
-    
-    # Handle /admin paths (for assets, API calls, etc. from the admin panel)
-    location /admin {
-        proxy_pass http://localhost:1337;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port $server_port;
-        proxy_cache_bypass $http_upgrade;
-    }
-    
-    # Fix malformed admin paths (adminupload -> admin/upload, admincontent-manager -> admin/content-manager)
-    location ~ ^/admin(upload|content-manager|i18n|users-permissions|email|upload|transfer|settings) {
-        rewrite ^/admin(upload|content-manager|i18n|users-permissions|email|upload|transfer|settings)(.*)$ /admin/$1$2 break;
-        proxy_pass http://localhost:1337;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port $server_port;
-        proxy_cache_bypass $http_upgrade;
-    }
-    
-    # Root path - serve admin panel directly (nginx rewrites / to /admin)
+    # Simple setup: proxy everything to Strapi
+    # Root shows admin panel, fix malformed paths (adminupload -> admin/upload)
     location / {
-        proxy_pass http://localhost:1337/admin;
+        # Rewrite root to /admin, and fix malformed paths like /adminupload -> /admin/upload
+        rewrite ^/$ /admin break;
+        rewrite ^/admin([^/]+)(.*)$ /admin/$1$2 break;
+        
+        # Proxy everything to Strapi
+        proxy_pass http://localhost:1337;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -92,55 +49,16 @@ server {
 #     ssl_certificate /etc/letsencrypt/live/admin.celebration-garden.com/fullchain.pem;
 #     ssl_certificate_key /etc/letsencrypt/live/admin.celebration-garden.com/privkey.pem;
 # 
-#     # Handle /api paths first (Strapi API endpoints - must come before /admin)
-#     location /api {
-#         proxy_pass http://localhost:1337;
-#         proxy_http_version 1.1;
-#         proxy_set_header Upgrade $http_upgrade;
-#         proxy_set_header Connection 'upgrade';
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#         proxy_set_header X-Forwarded-Host $host;
-#         proxy_set_header X-Forwarded-Port $server_port;
-#         proxy_cache_bypass $http_upgrade;
-#     }
-#     
-#     # Handle /admin paths (for assets, API calls, etc. from the admin panel)
-#     location /admin {
-#         proxy_pass http://localhost:1337;
-#         proxy_http_version 1.1;
-#         proxy_set_header Upgrade $http_upgrade;
-#         proxy_set_header Connection 'upgrade';
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#         proxy_set_header X-Forwarded-Host $host;
-#         proxy_set_header X-Forwarded-Port $server_port;
-#         proxy_cache_bypass $http_upgrade;
-#     }
-#     
-#     # Fix malformed admin paths (adminupload -> admin/upload, admincontent-manager -> admin/content-manager)
-#     location ~ ^/admin(upload|content-manager|i18n|users-permissions|email|upload|transfer|settings) {
-#         rewrite ^/admin(upload|content-manager|i18n|users-permissions|email|upload|transfer|settings)(.*)$ /admin/$1$2 break;
-#         proxy_pass http://localhost:1337;
-#         proxy_http_version 1.1;
-#         proxy_set_header Upgrade $http_upgrade;
-#         proxy_set_header Connection 'upgrade';
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#         proxy_set_header X-Forwarded-Host $host;
-#         proxy_set_header X-Forwarded-Port $server_port;
-#         proxy_cache_bypass $http_upgrade;
-#     }
-#     
-#     # Root path - serve admin panel directly (nginx rewrites / to /admin)
+#     # Simple setup: proxy everything to Strapi
+#     # Fix malformed paths (adminupload -> admin/upload) before proxying
 #     location / {
-#         proxy_pass http://localhost:1337/admin;
+#         # Fix paths like /adminupload -> /admin/upload, /admincontent-manager -> /admin/content-manager
+#         # Only rewrite if there's text after "admin" without a slash (malformed path)
+#         if ($request_uri ~ ^/admin([^/]+)(.*)$) {
+#             rewrite ^/admin([^/]+)(.*)$ /admin/$1$2 break;
+#         }
+#         
+#         proxy_pass http://localhost:1337;
 #         proxy_http_version 1.1;
 #         proxy_set_header Upgrade $http_upgrade;
 #         proxy_set_header Connection 'upgrade';
