--- a/deployment/config/nginx-strapi.conf
+++ b/deployment/config/nginx-strapi.conf
@@ -10,14 +10,13 @@ server {
     # Redirect HTTP to HTTPS (uncomment after SSL setup)
     # return 301 https://$server_name$request_uri;
 
-    # Simple setup: proxy everything to Strapi
-    # Root shows admin panel, fix malformed paths (adminupload -> admin/upload)
-    location / {
-        # Rewrite root to /admin, and fix malformed paths like /adminupload -> /admin/upload
-        rewrite ^/$ /admin break;
-        rewrite ^/admin([^/]+)(.*)$ /admin/$1$2 break;
-        
-        # Proxy everything to Strapi
+    # Redirect root to /admin
+    location = / {
+        return 301 /admin;
+    }
+    
+    # Proxy /admin to Strapi
+    location /admin {
         proxy_pass http://localhost:1337;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -30,7 +29,6 @@ server {
         proxy_set_header X-Forwarded-Port $server_port;
         proxy_cache_bypass $http_upgrade;
         
-        # Increase timeouts for large uploads
         proxy_connect_timeout 600;
         proxy_send_timeout 600;
         proxy_read_timeout 600;
@@ -49,15 +47,13 @@ server {
 #     ssl_certificate /etc/letsencrypt/live/admin.celebration-garden.com/fullchain.pem;
 #     ssl_certificate_key /etc/letsencrypt/live/admin.celebration-garden.com/privkey.pem;
 # 
-#     # Simple setup: proxy everything to Strapi
-#     # Fix malformed paths (adminupload -> admin/upload) before proxying
-#     location / {
-#         # Fix paths like /adminupload -> /admin/upload, /admincontent-manager -> /admin/content-manager
-#         # Only rewrite if there's text after "admin" without a slash (malformed path)
-#         if ($request_uri ~ ^/admin([^/]+)(.*)$) {
-#             rewrite ^/admin([^/]+)(.*)$ /admin/$1$2 break;
-#         }
-#         
+#     # Redirect root to /admin
+#     location = / {
+#         return 301 /admin;
+#     }
+#     
+#     # Proxy /admin to Strapi
+#     location /admin {
 #         proxy_pass http://localhost:1337;
 #         proxy_http_version 1.1;
 #         proxy_set_header Upgrade $http_upgrade;
