--- a/deployment/config/nginx-strapi.conf
+++ b/deployment/config/nginx-strapi.conf
@@ -1,77 +1,27 @@
-# Nginx configuration for Strapi CMS Admin Panel
-# This routes admin.celebration-garden.com directly to Strapi admin interface
-# Place this file in /etc/nginx/sites-available/strapi
-# Then create symlink: sudo ln -s /etc/nginx/sites-available/strapi /etc/nginx/sites-enabled/
-
 server {
     listen 80;
     server_name admin.celebration-garden.com;
 
-    # Redirect HTTP to HTTPS (uncomment after SSL setup)
-    # return 301 https://$server_name$request_uri;
+    # 1. Allow large file uploads (Images/Video)
+    client_max_body_size 100M;
 
-    # Redirect root to /admin
+    # 2. Redirect root domain (admin.celebration-garden.com) to the dashboard
     location = / {
         return 301 /admin;
     }
-    
-    # Proxy /admin to Strapi
-    location /admin {
-        proxy_pass http://localhost:1337;
+
+    # 3. Proxy EVERYTHING else to Strapi (API, Assets, Admin, Plugins)
+    location / {
+        proxy_pass http://127.0.0.1:1337;
         proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Server $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port $server_port;
-        proxy_cache_bypass $http_upgrade;
-        
-        proxy_connect_timeout 600;
-        proxy_send_timeout 600;
-        proxy_read_timeout 600;
-        send_timeout 600;
+        proxy_set_header Host $http_host;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_pass_request_headers on;
     }
-
-    # Increase client body size for file uploads
-    client_max_body_size 100M;
 }
-
-# SSL Configuration (uncomment after running certbot)
-# server {
-#     listen 443 ssl http2;
-#     server_name admin.celebration-garden.com;
-# 
-#     ssl_certificate /etc/letsencrypt/live/admin.celebration-garden.com/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/admin.celebration-garden.com/privkey.pem;
-# 
-#     # Redirect root to /admin
-#     location = / {
-#         return 301 /admin;
-#     }
-#     
-#     # Proxy /admin to Strapi
-#     location /admin {
-#         proxy_pass http://localhost:1337;
-#         proxy_http_version 1.1;
-#         proxy_set_header Upgrade $http_upgrade;
-#         proxy_set_header Connection 'upgrade';
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#         proxy_set_header X-Forwarded-Host $host;
-#         proxy_set_header X-Forwarded-Port $server_port;
-#         proxy_cache_bypass $http_upgrade;
-#         
-#         proxy_connect_timeout 600;
-#         proxy_send_timeout 600;
-#         proxy_read_timeout 600;
-#         send_timeout 600;
-#     }
-# 
-#     client_max_body_size 100M;
-# }
-
