--- a/deployment/config/nginx-strapi.conf
+++ b/deployment/config/nginx-strapi.conf
@@ -1,6 +1,25 @@
+# HTTP server - redirect to HTTPS
 server {
     listen 80;
     server_name admin.celebration-garden.com;
+
+    # Redirect all HTTP traffic to HTTPS
+    return 301 https://$server_name$request_uri;
+}
+
+# HTTPS server
+server {
+    listen 443 ssl http2;
+    server_name admin.celebration-garden.com;
+
+    # SSL certificates (configure with: sudo certbot --nginx -d admin.celebration-garden.com)
+    ssl_certificate /etc/letsencrypt/live/admin.celebration-garden.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/admin.celebration-garden.com/privkey.pem;
+
+    # SSL configuration
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
 
     # 1. Allow large file uploads (Images/Video)
     client_max_body_size 100M;
