--- a/deployment/config/nginx-nextjs.conf
+++ b/deployment/config/nginx-nextjs.conf
@@ -2,14 +2,33 @@
 # Place this file in /etc/nginx/sites-available/celebration-garden
 # Then create symlink: sudo ln -s /etc/nginx/sites-available/celebration-garden /etc/nginx/sites-enabled/
 
+# HTTP server - redirect to HTTPS
 server {
     listen 80;
     server_name celebration-garden.com www.celebration-garden.com;
 
-    # Redirect HTTP to HTTPS (uncomment after SSL setup)
-    # return 301 https://$server_name$request_uri;
+    # Redirect all HTTP traffic to HTTPS
+    return 301 https://$server_name$request_uri;
+}
 
-    # For initial setup, allow HTTP
+# HTTPS server
+server {
+    listen 443 ssl http2;
+    server_name celebration-garden.com www.celebration-garden.com;
+
+    # SSL certificates (configure with: sudo certbot --nginx -d celebration-garden.com -d www.celebration-garden.com)
+    ssl_certificate /etc/letsencrypt/live/celebration-garden.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/celebration-garden.com/privkey.pem;
+
+    # SSL configuration
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+
+    # Allow large file uploads (if needed for scrapbook images)
+    client_max_body_size 100M;
+
+    # Proxy to Next.js
     location / {
         proxy_pass http://localhost:3000;
         proxy_http_version 1.1;
@@ -29,31 +48,3 @@ server {
         add_header Cache-Control "public, immutable";
     }
 }
-
-# SSL Configuration (uncomment after running certbot)
-# server {
-#     listen 443 ssl http2;
-#     server_name celebration-garden.com www.celebration-garden.com;
-# 
-#     ssl_certificate /etc/letsencrypt/live/celebration-garden.com/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/celebration-garden.com/privkey.pem;
-# 
-#     location / {
-#         proxy_pass http://localhost:3000;
-#         proxy_http_version 1.1;
-#         proxy_set_header Upgrade $http_upgrade;
-#         proxy_set_header Connection 'upgrade';
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#         proxy_cache_bypass $http_upgrade;
-#     }
-# 
-#     location /_next/static {
-#         proxy_pass http://localhost:3000;
-#         proxy_cache_valid 200 60m;
-#         add_header Cache-Control "public, immutable";
-#     }
-# }
-
