--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "next": "^14.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@google/generative-ai": "^0.21.0",
+    "groq-sdk": "^0.12.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
